fix: 🐛 VE z-index

--- a/skinStyles/extensions/DiscussionTools/ext.discussionTools.init.less
+++ b/skinStyles/extensions/DiscussionTools/ext.discussionTools.init.less
@@ -60,3 +60,9 @@
 		color: var(--color-base--subtle);
 	}
 }
+
+.ext-discussiontools-ui-newTopic {
+	.ve-ui-toolbar > .oo-ui-toolbar-bar {
+		z-index: 11;
+	}
+}
