--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.less
@@ -295,9 +295,9 @@
 // Make toolbar more smaller screen friendly
 // Well at least I did by best
 @media (max-width: 800px) {
-	.ve-ui-toolbar-floating {
-		z-index: 4;
-	}
+	// .ve-ui-toolbar-floating {
+	// 	z-index: 4;
+	// }
 
 	.skin-citizen {
 		.ve-ui-toolbar {
